# triggerbox_ros2

./: README.md  package.xml  setup.cfg  setup.py
hardware_sl_v1/: triggerbox_BOM.xlsx
hardware_sl_v1/orders/: digikey2024-02-12T144911.xlsx
hardware_sl_v1/triggerbox_shield_buffers/: triggerbox_shield_buffers.kicad_prl  triggerbox_shield_buffers.kicad_pro  triggerbox_shield_buffers.kicad_sch
hardware_sl_v1/triggerbox_sl/: triggerbox_sl.kicad_pcb  triggerbox_sl.kicad_prl  triggerbox_sl.kicad_pro  triggerbox_sl.kicad_sch
src/triggerbox/: triggerbox_device.py  triggerbox_host.py
triggerbox_ros2/: arduinoudev.py  time_model.py  triggerbox_client.py  triggerbox_device.py  triggerbox_host.py
