<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>triggerbox_ros2</name>
  <version>0.0.0</version>
  <description>Defined timestamp trigger pulse host and firmware code.</description>
  <maintainer email="aspence@temple.edu">spencelab</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>triggerbox_ros2_interfaces</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- apparently ok becuase our CMakeLists.txt can setup our python stuff -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
